<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="301dp"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:hint="@string/what_is_your_name"
        android:inputType="textPersonName|text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/how_are_you"
        android:layout_width="307dp"
        android:layout_height="74dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/how_are_you_today"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        app:layout_constraintVertical_bias="0.083" />

    <ImageButton
        android:id="@+id/quality_zero_image"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:contentDescription="@string/quality_0"
        app:layout_constraintEnd_toStartOf="@+id/quality_one_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_are_you"
        app:srcCompat="@drawable/ic_sleep_0" />

    <ImageButton
        android:id="@+id/quality_one_image"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/quality_1"
        app:layout_constraintBottom_toBottomOf="@+id/quality_zero_image"
        app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
        app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
        app:srcCompat="@drawable/ic_sleep_1" />

    <ImageButton
        android:id="@+id/quality_two_image"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="@dimen/margin"
        android:contentDescription="@string/quality_2"
        app:layout_constraintBottom_toBottomOf="@+id/quality_one_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quality_one_image"
        app:srcCompat="@drawable/ic_sleep_2" />

    <ImageButton
        android:id="@+id/quality_three_image"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:contentDescription="@string/quality_3"
        app:layout_constraintEnd_toStartOf="@+id/quality_four_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quality_zero_image"
        app:srcCompat="@drawable/ic_sleep_3" />

    <ImageButton
        android:id="@+id/quality_four_image"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/quality_4"
        app:layout_constraintBottom_toBottomOf="@+id/quality_three_image"
        app:layout_constraintEnd_toStartOf="@+id/quality_five_image"
        app:layout_constraintStart_toEndOf="@+id/quality_three_image"
        app:layout_constraintTop_toTopOf="@+id/quality_three_image"
        app:srcCompat="@drawable/ic_sleep_4" />

    <ImageButton
        android:id="@+id/quality_five_image"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="@dimen/margin"
        android:contentDescription="@string/quality_5"
        app:layout_constraintBottom_toBottomOf="@+id/quality_four_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quality_four_image"
        app:layout_constraintTop_toTopOf="@+id/quality_four_image"
        app:srcCompat="@drawable/ic_sleep_5" />

    <Button
        android:id="@+id/monthly_journey"
        android:layout_width="288dp"
        android:layout_height="79dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="152dp"
        android:text="@string/monthly_journey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quality_three_image"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edit"
        tools:layout_editor_absoluteY="98dp" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done_button" />

</androidx.constraintlayout.widget.ConstraintLayout>