<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_memory_of_the_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/memory_of_the_day"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_memory_of_the_day" />


    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/send_button_text"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toEndOf="@+id/date_button"
        app:layout_constraintTop_toBottomOf="@+id/label_memory_of_the_day"
        app:layout_constraintVertical_bias="0.18" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_button"
        app:layout_constraintVertical_bias="0.26">

        <ImageView
            android:id="@+id/picture_of_memory"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:text="@string/picture_of_memory"
            android:contentDescription="Photo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/memory_camera"
                android:layout_width="29dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_camera"
                android:text="@string/memory_camera_chosen" />

            <ImageButton
                android:id="@+id/memory_gallery"
                android:layout_width="29dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_gallery"
                android:layout_margin="10dp"
                android:text="@string/memory_camera_chosen" />

        </LinearLayout>



        <EditText
            android:id="@+id/detail_of_memory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_of_memory" />

    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>